--- a/MoviesApp/Views/Actors/Create.cshtml
+++ b/MoviesApp/Views/Actors/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MoviesApp.ViewModels.InputActorViewModel
+﻿@model MoviesApp.ViewModels.ActorsViewModels.InputActorViewModel
 
 @{
     ViewData["Title"] = "Create";
