--- a/MoviesApp/Views/Actors/Details.cshtml
+++ b/MoviesApp/Views/Actors/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MoviesApp.ViewModels.ActorViewModel
+﻿@model MoviesApp.ViewModels.ActorsViewModels.ActorViewModel
 
 @{
     ViewData["Title"] = "Details";
