--- a/MoviesApp/Views/Actors/Index.cshtml
+++ b/MoviesApp/Views/Actors/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq
-@model IEnumerable<MoviesApp.ViewModels.ActorViewModel>
+@model IEnumerable<MoviesApp.ViewModels.ActorsViewModels.ActorViewModel>
 
 @{
     ViewData["Title"] = "Index";
