--- a/MoviesApp/Views/Movies/Edit.cshtml
+++ b/MoviesApp/Views/Movies/Edit.cshtml
@@ -1,4 +1,4 @@
-@model MoviesApp.ViewModels.EditMovieViewModel
+@model MoviesApp.ViewModels.MoviesViewModels.EditMovieViewModel
 
 @{
     ViewData["Title"] = "Edit";
