--- a/MoviesApp/Views/Actors/Delete.cshtml
+++ b/MoviesApp/Views/Actors/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MoviesApp.ViewModels.DeleteActorViewModel
+﻿@model MoviesApp.ViewModels.ActorsViewModels.DeleteActorViewModel
 
 @{
     ViewData["Title"] = "Delete";
