--- a/MoviesApp/Views/Actors/Edit.cshtml
+++ b/MoviesApp/Views/Actors/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MoviesApp.ViewModels.EditActorViewModel
+﻿@model MoviesApp.ViewModels.ActorsViewModels.EditActorViewModel
 
 @{
     ViewData["Title"] = "Edit";
