--- a/MoviesApp/Views/Movies/Create.cshtml
+++ b/MoviesApp/Views/Movies/Create.cshtml
@@ -1,4 +1,4 @@
-@model MoviesApp.ViewModels.InputMovieViewModel
+@model MoviesApp.ViewModels.MoviesViewModels.InputMovieViewModel
 
 @{
     ViewData["Title"] = "Create";
