--- a/MoviesApp/Views/Movies/Delete.cshtml
+++ b/MoviesApp/Views/Movies/Delete.cshtml
@@ -1,4 +1,4 @@
-@model MoviesApp.ViewModels.DeleteMovieViewModel
+@model MoviesApp.ViewModels.MoviesViewModels.DeleteMovieViewModel
 
 @{
     ViewData["Title"] = "Delete";
