--- a/MoviesApp/Views/Movies/Details.cshtml
+++ b/MoviesApp/Views/Movies/Details.cshtml
@@ -1,4 +1,4 @@
-@model MoviesApp.ViewModels.MovieViewModel
+@model MoviesApp.ViewModels.MoviesViewModels.MovieViewModel
 
 @{
     ViewData["Title"] = "Details";
